better label handeling

--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -1,8 +1,5 @@
 label_type = "62" # good for ql-[500-800] series (anyh 62mm wide)
 # label_type = "102" # good for ql-1100 (any 100mm wide)
 
-#printer_model = "QL-550" deprcated, a single(?) connected printer will be automaticly detected
-
 cat_api_key = "ask me"
-txt2img_url = "ask me" # tami sd bot
-# txt2img_url = "http://localhost:7860" #for local run of stable diffusion
+txt2img_url = "http://localhost:7860" #for local run of stable diffusion
