add option to set title in scerets

--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -1,5 +1,11 @@
-label_type = "62" # good for ql-[500-800] series (anyh 62mm wide)
-# label_type = "102" # good for ql-1100 (any 100mm wide)
+# Printer settings
+label_type = "62"  # Optional: Override auto-detected label width. Common values: "62" for QL-[500-800] series, "102" for QL-1100
 
-cat_api_key = "ask me"
-txt2img_url = "http://localhost:7860" #for local run of stable diffusion
+# API keys and endpoints
+cat_api_key = "ask me"  # Get your free API key from https://thecatapi.com/
+txt2img_url = "http://localhost:7860"  # URL for Stable Diffusion API endpoint
+
+# UI customization
+title = "STICKER FACTORY"  # Custom title for the app
+history_limit = 15  # Number of images to show in history (default: 15)
+items_per_page = 5  # Number of items to show per page in gallery (default: 5)
