--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -9,3 +9,7 @@ txt2img_url = "http://localhost:7860"  # URL for Stable Diffusion API endpoint
 title = "STICKER FACTORY"  # Custom title for the app
 history_limit = 15  # Number of images to show in history (default: 15)
 items_per_page = 5  # Number of items to show per page in gallery (default: 5)
+
+# Queue view 
+# it shows the queue status in the sidebar
+queueview = false
